# azure-sdk-for-cpp

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  index.html  manifest.json
cmake-modules/: AzureTransportAdapters.cmake  acquire_rust.cmake
doc/: BatchOperations.md
sdk/attestation/azure-security-attestation/: CMakeLists.txt
sdk/attestation/azure-security-attestation/src/private/crypto/: CMakeLists.txt
sdk/attestation/azure-security-attestation/src/private/crypto/bcrypt/: bcrypt_helpers.hpp  bcryptcert.cpp  bcryptcert.hpp  bcryptcrypto.cpp  bcryptkeys.cpp  bcryptkeys.hpp
sdk/attestation/azure-security-attestation/src/private/crypto/openssl/: opensslkeys.cpp
sdk/core/azure-core/: CMakeLists.txt
sdk/core/azure-core-amqp/inc/azure/core/amqp/common/: async_operation_queue.hpp
sdk/core/azure-core-amqp/src/impl/rust_amqp/amqp/: session.cpp
sdk/core/azure-core-amqp/src/models/: amqp_message.cpp  amqp_properties.cpp
sdk/core/azure-core-amqp/test/ut/: message_sender_receiver.cpp  mock_amqp_server.hpp
sdk/core/azure-core/inc/azure/core/: context.hpp  operation.hpp
sdk/core/azure-core/inc/azure/core/http/: reqwest_transport.hpp
sdk/core/azure-core/src/http/reqwest/: CMakeLists.txt
sdk/core/azure-core/src/http/reqwest/ReqwestCppClient/: CMakeLists.txt
sdk/core/azure-core/src/http/reqwest/ReqwestCppClient/src/: CMakeLists.txt  RustHttpTransport.cpp
sdk/core/azure-core/src/http/reqwest/ReqwestCppClient/src/private/: reqwest_http_transport_private.hpp
sdk/core/azure-core/src/http/reqwest/ReqwestCppClient/tests/: AzureTestImplementationTests.cpp  AzureTransportTests.cpp  AzureTransportTests.hpp  CMakeLists.txt  RawTests.cpp  RequestTests.cpp  RustHttp.cpp  RustHttp.h  TransportTests.cpp
sdk/core/azure-core/src/http/reqwest/ReqwestRustClient/: Cargo.toml  build.rs  cbindgen.toml  rust_http.h
sdk/core/azure-core/src/http/reqwest/ReqwestRustClient/src/: byte_array.rs  cpp_body_stream.rs  header_iterator.rs  http_header.rs  http_request.rs  http_result.rs  lib.rs  raw_response.rs  runtime_context.rs  rust_body_stream.rs  rust_error.rs
sdk/core/azure-core/test/ut/: CMakeLists.txt  transport_adapter_base_test.cpp  transport_adapter_base_test.hpp  transport_adapter_implementation_test.cpp
sdk/eventhubs/azure-messaging-eventhubs/: CMakeLists.txt
sdk/eventhubs/azure-messaging-eventhubs/inc/azure/messaging/eventhubs/: producer_client.hpp
sdk/eventhubs/azure-messaging-eventhubs/src/: producer_client.cpp
sdk/eventhubs/azure-messaging-eventhubs/test/: CMakeLists.txt
sdk/eventhubs/azure-messaging-eventhubs/test/eventhub_server/: CMakeLists.txt  amqp_server.hpp  fake_eventhub_server.cpp
sdk/eventhubs/azure-messaging-eventhubs/test/eventhubs-stress-test/src/inc/: eventhubs_stress_scenarios.hpp
sdk/eventhubs/azure-messaging-eventhubs/test/ut/: producer_client_test.cpp
